--- a/index.yaml
+++ b/index.yaml
@@ -11,21 +11,22 @@ indexes:
 #  - name: timestamp
 #  - name: P-BMP180-01
 
-- kind: sensDat3
-  properties:
-  - name: timestamp
-  - name: sensor
-  - name: value
+#- kind: sensDat3
+#  properties:
+#  - name: timestamp
+#  - name: sensor
+#  - name: value
 
-- kind: sensDat3
-  properties:
-  - name: sensor
-  - name: timestamp
-  - name: value
+#- kind: sensDat3
+#  properties:
+#  - name: sensor
+#  - name: timestamp
+#  - name: value
 
 - kind: sensDat2
   properties:
   - name: timestamp
   - name: P-BMP180-01
   - name: T-ADT7410-02
+  - name: H-SHT-31
 
